# RackAndCode-v1

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PROVENANCE.md  README.md  docker-compose.yml  package.json  sbom.cdx.json
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/app/middleware/: auth.py
backend/app/routes/: __init__.py  admin.py  ai.py  assets.py  auth.py  dev_agent.py  inventory.py  logs.py  notifications.py  overview.py  projects.py  tech.py  transport.py  wiki.py  work_orders.py
backend/app/store/: __init__.py
coordinator/: __init__.py  app.py  core.py  local_worker.py  run.py  scheduler.py
data/: .master_key
docs/: AGENT_COORDINATOR.md  AI_COLLABORATION.md  API.md  ARCHITECTURE.md  BRAND.md  DEVELOPMENT.md  FASTAPI_MIGRATION.md  FASTAPI_PARITY.md  HANDOFF.md  MIGRATION.md  MOBILE.md  OPERATIONS.md  README.md  RELIABILITY.md  ROADMAP.md  SECURITY.md  TRD.md  ai-assisted-development.md  decisions.md  development-log.md  openapi.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
planning/: project-tasks.json
scripts/: backup.py  coordinator_stack.py  load_roadmap.py  mac_agent.py  quality_gate.py  serve.sh
server/: __init__.py  ai_router.py  app.py  connectors.py  doc_search.py  migrations.py
tests/: test_agent_coordinator.py  test_backup.py  test_branch_claude_diagrams.py  test_claude_integration.py  test_fastapi_logs.py  test_fastapi_overview.py  test_fastapi_preview.py  test_frontend_contract.py  test_server.py  (+2 more)
(+144 files in other folders)
